fix message navigation mobile scaling bug

--- a/client/src/components/LoggedInPages/Pages/Messages/Messages.css
+++ b/client/src/components/LoggedInPages/Pages/Messages/Messages.css
@@ -19,7 +19,8 @@
 @media screen and (max-width: 580px) {
   .msg-contacts-container {
     position: absolute;
-    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
     top: -100%;
     opacity: 0;
     transition: all 0.4s ease;
